# autoresearch-post-training

./: .gitignore  EXPERIMENT_LOG.md  Makefile  README.md  eval.py  experiment_log.jsonl  plot.py  prepare.py  program.md  pyproject.toml  run.py  run_qwen.py  sandbox.py  train.py
configs/: bench_1_baseline.yaml  bench_2_subprocess.yaml  bench_3_sleep.yaml  bench_4_reuse.yaml  benchmark.yaml  default.yaml  dr_grpo.yaml
docker/: Dockerfile.sandbox  sandbox_runner.py
report/: generate_figs.py  report.aux  report.out  report.tex  report.toc
runs/run_001/: report.md
runs/run_002/: experiment_log.jsonl  report.md
runs/run_003/: experiment_log.jsonl  report.md
runs/run_004/: experiment_log.jsonl
scripts/: analyze_bench.py  build_sandbox.sh  compare_results.py  deploy_and_run.sh  run_all_benchmarks.sh  run_benchmark.sh  setup_gcp.sh
src/: callbacks.py  config.py  dataset.py  evaluate.py  reward.py  sandbox.py  train.py  utils.py
tests/: test_dataset.py  test_reward.py  test_sandbox.py  test_utils.py
