[project]
name = "autoresearch-post-training"
version = "0.1.0"
description = "Autonomous post-training research (SFT, DPO, RLHF)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "requests>=2.32.0",
    "tiktoken>=0.11.0",
    "torch==2.9.1",
    "transformers>=4.52.0",
    "trl>=0.18.0",
    "peft>=0.16.0",
    "accelerate>=1.7.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
