[project]
name = "autoresearch-post-training"
version = "0.1.0"
description = "Autonomous post-training research (GRPO, SFT, DPO) for coding agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "trl>=0.23.0",
    "transformers>=4.48.0",
    "accelerate>=1.3.0",
    "peft>=0.14.0",
    "datasets>=3.2.0",
    "vllm>=0.8.5; sys_platform == 'linux'",
    "torch>=2.5.0",
    "docker>=7.0.0",
    "wandb>=0.19.0",
    "evalplus>=0.3.1",
    "pyyaml>=6.0",
    "numpy>=2.2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
]

[tool.uv]
package = false
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin'",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
