[project]
name = "autoresearch-post-training"
version = "0.2.0"
description = "Continuously train Qwen3.5-0.8B-Base on MBPP++ with SFT + GRPO"
requires-python = ">=3.10"
dependencies = [
    "trl>=0.23.0",
    "transformers>=4.48.0",
    "accelerate>=1.3.0",
    "peft>=0.14.0",
    "datasets>=3.2.0",
    "torch>=2.5.0",
    "wandb>=0.19.0",
    "evalplus>=0.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
]
fast = [
    "flash-attn>=2.7.0",  # optional: ~2x faster attention on Ampere+ GPUs
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
